# learn-qt

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: Windows-build.yml  macOS-build.yml
include/: datamodel.h  sizeutils.hpp  utf8utils.hpp  view.h
include/utils/: logger_utils.h
qml/: Dir.qml  Main.qml  NavigList.qml  PlainButton.qml
resources/: Entitlements.plist
src/: datamodel.cpp  main.cpp  view.cpp
src/utils/: logger_utils.cpp
